--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
       <div class="sliding-canvas">
           
         <header class="header">
-        <h1>Logo Here</h1>
+        <h1>NEADS</h1>
             
                <!-- Menu Toggle Icon -->
         <a class="toggle-btn i-menu" href="#main-menu"><span>Menu</span></a>
@@ -23,14 +23,14 @@
         <nav class="navigation slide-menu">
 
         <a class="close-btn i-close" href="#main-menu"><span>Close</span></a>
-
           <ul>
               <li><a href="#">ABOUT</a></li>
               <li><a href="#">SERVICE</a></li>
-              <li><a href="#">RESOURCE</a></li>
+              <li><a href="#">RESOURCE</a>
+              </li>
               <li><a href="#">GIVE</a></li>
           </ul>
-        </nav>
+            </nav>
       </header><!-- /header -->
 
       <main>
