fix(html): header
header open on the right side

--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 <body class="noscript">
     <div class="site-wrapper" data-state="slide-closed">
       <div class="sliding-canvas">
-          
+          <header>
           <div>
               <img class="logo" src="images/logo.svg" alt="NEADS logo">
           </div>
